# grp7Dit638

./: CMakeLists.txt  Dockerfile  Dockerfile.armhf  README.md  UDP.cpp  carControl.cpp  firstTry.cpp  messages.hpp  messages.odvd  messenger.cpp  terminalControl.cpp
Carcontrol/: CMakeLists.txt  Dockerfile  Dockerfile.armhf  README.md  carControl.cpp  terminalControl.cpp
Carcontrol/src/: opendlv-standard-message-set-v0.9.6.odvd
kiwidetect/: CMakeLists.txt  Dockerfile.amd64  Dockerfile.armhf  README.md  darknet-yolov3.cfg
kiwidetect/src/: README.md  classes.names  darknet-yolov3.cfg  image-postprocessing-opencv.cpp  opendlv-standard-message-set-v0.9.6.odvd  testerer.cpp  testerer.h
objectdetect/: object_detection_yolo.py
objectdetect-training/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  classes.names  cmake_install.cmake  darknet-yolov3.cfg  darknet.data  kiwi-detect.cpp  object_detection_yolo.py  snowman_test.txt  snowman_train.txt  tiny.cfg
objectdetect-training/JPEGImages/: README.md
objectdetect-training/test data/videos/: 10.h264  11.h264  12.h264  13.h264  14.h264  19.h264  23.h264  6.h264  7.h264  8.h264  9.h264  output_640.mov
old code backup/: CMakeLists.txt  messages.odvd
